test_suite5/ALAN/test_suite/alan-2022-examples/failing/002410_mutation.alan
source K begin get source o4V end
